--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,25 @@
-name: Run Batch10
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
+name: javacript_workflow
 jobs:
   run_batch10:
     name: Run batch10.py
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
       
-    - name: Run Python script
-      run: python batch10.py
+      - name: Run Python script
+        run: python batch10.py
+
+  set_env_variables:
+    name: Set Environment Variables   # Corrected indentation
+    runs-on: ubuntu-latest
+    env:
+      VARIABLE_ONE: "value_one"
+      VARIABLE_TWO: "value_two"
+    steps:
+      - name: Display Environment Variables
+        run: |
+          echo "Variable One: $VARIABLE_ONE"
+          echo "Variable Two: $VARIABLE_TWO"
+
